<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/menu_dashboard" />
    <item
        android:id="@+id/nav_transactions"
        android:icon="@drawable/ic_nav_transactions"
        android:title="@string/menu_transactions" />
    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_nav_categories"
        android:title="@string/menu_categories" />
    <item
        android:id="@+id/nav_assets"
        android:icon="@drawable/ic_nav_assets"
        android:title="@string/menu_assets" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/menu_settings" />
</menu>
